force-app/main/default/objects/ucinn_ascendv2__Matching_Related_List_Object__c/ucinn_ascendv2__Matching_Related_List_Object__c.object-meta.xml
<CustomObject>
    <description>Represent all the related list objects be selected for this matching rule</description>
    <label>Matching Related List Object</label>
    <nameField>
        <label>Matching Related List Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Matching Related List Objects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>