force-app/main/default/objects/ucinn_ascendv2__Matching_Related_List_Object__c/fields/ucinn_ascendv2__Critical_Field_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Critical_Field_Multiplier__c</fullName>
    <description>The multiplier for the critical field, see Critical Field Name description for more info</description>
    <label>Critical Field Multiplier</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>