force-app/main/default/objects/ucinn_ascendv2__Matching_Related_List_Object__c/fields/ucinn_ascendv2__Critical_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Critical_Field_Name__c</fullName>
    <description>The name for the field that if this field has a specific value when any field of this related list object record got a match it will get a higher score based on the multiplier than the other record that doesn&apos;t have the specific value for this field.</description>
    <label>Critical Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>