force-app/main/default/objects/ucinn_ascendv2__Matching_Related_List_Object__c/fields/ucinn_ascendv2__Matching_Rule__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Matching_Rule__c</fullName>
    <description>Indicate which matching rule this related list object belongs to</description>
    <label>Matching Rule</label>
    <referenceTo>ucinn_ascendv2__Matching_Rule__c</referenceTo>
    <relationshipLabel>Matching Related List Objects</relationshipLabel>
    <relationshipName>Matching_Related_List_Objects</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>